1. renamed iphlpapi_vista.dll iphlpaex.dll

--- a/src/iphlpapi_vista/CMakeLists.txt
+++ b/src/iphlpapi_vista/CMakeLists.txt
@@ -2,8 +2,8 @@
 remove_definitions(-D_WIN32_WINNT=0x502 -DWINVER=0x502)
 add_definitions(-D_WIN32_WINNT=0x600 -DWINVER=0x600)
 
-spec2def(iphlpapi.dll iphlpapi.spec)
-spec2def(iphlpapi.dll iphlpapi2.spec)
+spec2def(iphlpaex.dll iphlpapi.spec)
+spec2def(iphlpaex.dll iphlpapi2.spec)
 
 list(APPEND SOURCE
     iphlpapi_main.c
@@ -12,7 +12,7 @@ list(APPEND SOURCE
 
 add_library(iphlpapi_obj OBJECT ${SOURCE})
 
-add_library(iphlpapi_vista MODULE $<TARGET_OBJECTS:iphlpapi_obj>    
+add_library(iphlpaex MODULE $<TARGET_OBJECTS:iphlpapi_obj>    
     ${CMAKE_CURRENT_BINARY_DIR}/iphlpapi.def
     ${CMAKE_CURRENT_BINARY_DIR}/iphlpapi2.def
     dllMain.c
@@ -20,5 +20,5 @@ add_library(iphlpapi_vista MODULE $<TARGET_OBJECTS:iphlpapi_obj>
 
 
 
-target_link_libraries(iphlpapi_vista iphlpapi)
-target_link_options(iphlpapi_vista PRIVATE -nostartfiles)
+target_link_libraries(iphlpaex iphlpapi)
+target_link_options(iphlpaex PRIVATE -nostartfiles)
