1. added GetDateFormatEx 2. fixed InitializeConditionVariable NTDLLEX redirection 3. added CancelIoEx, CancelSynchronousIo stubs 4. added GetFinalPathNameByHandleW 5. added CreateSymbolicLinkW

--- a/src/kernel32_vista/CMakeLists.txt
+++ b/src/kernel32_vista/CMakeLists.txt
@@ -9,7 +9,10 @@ list(APPEND SOURCE
     sync.c
     datetime.c
     locale.c
-    ${CMAKE_CURRENT_BINARY_DIR}/locale_table.c    
+    ${CMAKE_CURRENT_BINARY_DIR}/locale_table.c  
+    stubs.c
+    finalpath.c
+    symlink.c
     )
     
 
