1. added compilerflags.cmake 2. added -Wno-attributes flag

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,6 @@
 cmake_minimum_required(VERSION 3.12)
 include (tools/toolchain-gcc.cmake)
+include(tools/compilerflags.cmake)
 include (tools/spec2def.cmake)
 
 set(CMAKE_SHARED_LIBRARY_PREFIX "")
@@ -13,6 +14,8 @@ add_definitions(-DUNICODE -D_UNICODE -D_WIN32_WINNT=0x502 -DWINVER=0x502)
 
 include_directories(src/include)
 add_subdirectory(tools)
+
+add_compile_flags(-Wno-attributes)
 add_subdirectory(src/kernel32_vista)
 add_subdirectory(src/ntdll_vista)
 add_subdirectory(src/iphlpapi_vista)
