1. fixed spec2def for forwarding by ordinal 2. added shell32 extender 3. implemented function shell32:SHGetStockIconInfo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,3 +19,5 @@ add_compile_flags(-Wno-attributes)
 add_subdirectory(src/kernel32_vista)
 add_subdirectory(src/ntdll_vista)
 add_subdirectory(src/iphlpapi_vista)
+add_subdirectory(src/shell32_vista)
+
