1. enabled gc-sections

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ include (tools/spec2def.cmake)
 
 set(CMAKE_SHARED_LIBRARY_PREFIX "")
 set(CMAKE_SHARED_MODULE_PREFIX "")
-set (CMAKE_MODULE_LINKER_FLAGS "-s")
+set (CMAKE_MODULE_LINKER_FLAGS "-s -Wl,--gc-sections")
 
 set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
 set (CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
@@ -15,9 +15,8 @@ add_definitions(-DUNICODE -D_UNICODE -D_WIN32_WINNT=0x502 -DWINVER=0x502)
 include_directories(src/include)
 add_subdirectory(tools)
 
-add_compile_flags(-Wno-attributes)
+add_compile_flags("-Wno-attributes -fdata-sections")
 add_subdirectory(src/kernel32_vista)
 add_subdirectory(src/ntdll_vista)
 add_subdirectory(src/iphlpapi_vista)
 add_subdirectory(src/shell32_vista)
-
