1. added kernel32 exm

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,3 +39,4 @@ add_subdirectory(src/shell32_vista)
 if(ARCH STREQUAL "amd64")
 	add_subdirectory(src/wow64)
 endif()
+add_subdirectory(src/kernel32)
