1. ntdll.dll & kernel32.dll final form

--- a/src/kernel32/CMakeLists.txt
+++ b/src/kernel32/CMakeLists.txt
@@ -1,16 +1,14 @@
+spec2def(kernel32.dll ../kernel32_vista/krnl32ex.spec)
 
+list(APPEND OBJS
+	${CMAKE_CURRENT_BINARY_DIR}/krnl32ex.def
+	$<TARGET_FILE:krnl32ex> -lntdll)
 
-list(APPEND DEFS
-	${CMAKE_CURRENT_BINARY_DIR}/../kernel32_vista/krnl32ex.def)
-
-add_exm_file(kernel32 x64.5.2.3790.3959
-	${CMAKE_CURRENT_SOURCE_DIR}/x64.5.2.3790.3959.def 
-	$<TARGET_OBJECTS:krnl32ex_obj> ${DEFS})
-add_exm_file(kernel32 x86.5.2.3790.3959
-	${CMAKE_CURRENT_SOURCE_DIR}/x86.5.2.3790.3959.def 
-	$<TARGET_OBJECTS:krnl32ex_obj> ${DEFS})
-add_exm_file(kernel32 wow.5.2.3790.3959
-	${CMAKE_CURRENT_SOURCE_DIR}/wow.5.2.3790.3959.def 
-	$<TARGET_OBJECTS:krnl32ex_obj> ${DEFS})
+add_exm_file(x64.5.2.3790.3959 ${OBJS}
+	${CMAKE_CURRENT_SOURCE_DIR}/x64.5.2.3790.3959.def)
+add_exm_file(x86.5.2.3790.3959 ${OBJS}
+	${CMAKE_CURRENT_SOURCE_DIR}/x86.5.2.3790.3959.def)
+add_exm_file(wow.5.2.3790.3959 ${OBJS}
+	${CMAKE_CURRENT_SOURCE_DIR}/wow.5.2.3790.3959.def)
 	
-add_exm_target(kernel32)
+add_exm_target(kernel32.dll)
