--- a/src/kernel32/CMakeLists.txt
+++ b/src/kernel32/CMakeLists.txt
@@ -2,7 +2,7 @@ spec2def(kernel32.dll ../kernel32_vista/krnl32ex.spec)
 
 list(APPEND OBJS
 	${CMAKE_CURRENT_BINARY_DIR}/krnl32ex.def
-	$<TARGET_FILE:krnl32ex> -lntdll)
+	$<TARGET_FILE:krnl32ex> -lntdll -lntdllcrt)
 
 add_exm_file(x64.5.2.3790.3959 ${OBJS}
 	${CMAKE_CURRENT_SOURCE_DIR}/x64.5.2.3790.3959.def)
