1. create dll, WIP

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,8 @@ set (CMAKE_MODULE_LINKER_FLAGS "-s -Wl,--gc-sections")
 
 set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${BIN_DIR})
 set (CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${BIN_DIR})
+set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BIN_DIR})
+
 
 add_definitions(-DUNICODE -D_UNICODE -D_WIN32_WINNT=0x502 -DWINVER=0x502)
 
