1. added kernel32.spec

--- a/src/kernel32_vista/CMakeLists.txt
+++ b/src/kernel32_vista/CMakeLists.txt
@@ -4,6 +4,7 @@ add_definitions(-D_WIN32_WINNT=0x601 -DWINVER=0x601
 	-D_KERNEL32_)
 
 spec2def(krnl32ex.dll krnl32ex.spec)
+spec2def(krnl32ex.dll kernel32.spec)
 
 add_library(krnl32exO OBJECT
 	sync.c
@@ -19,7 +20,13 @@ add_library(krnl32exO OBJECT
 
 
 add_library(krnl32ex STATIC $<TARGET_OBJECTS:krnl32exO>)
-add_library(krnl32exSo SHARED  $<TARGET_OBJECTS:krnl32exO> dllMain.c)
+add_library(krnl32exSo SHARED  $<TARGET_OBJECTS:krnl32exO> dllMain.c
+	${CMAKE_CURRENT_BINARY_DIR}/krnl32ex.def
+	${CMAKE_CURRENT_BINARY_DIR}/kernel32.def )
+	
+	
+	
+	
 target_link_libraries(krnl32exSo ntdllexSo ntdll)
 target_link_options(krnl32exSo PRIVATE -nostartfiles)
 
