1. added ntv6-patch tool: patches executable to use win7lib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,12 +15,7 @@ endif()
 
 set(CMAKE_SHARED_LIBRARY_PREFIX "")
 set(CMAKE_SHARED_MODULE_PREFIX "")
-set (CMAKE_MODULE_LINKER_FLAGS "-s -Wl,--gc-sections")
-set (CMAKE_SHARED_LINKER_FLAGS ${CMAKE_MODULE_LINKER_FLAGS})
-
-
-
-
+add_link_options (-s -Wl,--gc-sections)
 
 set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${BIN_DIR})
 set (CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${BIN_DIR})
@@ -29,8 +24,8 @@ set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BIN_DIR})
 
 add_definitions(-DUNICODE -D_UNICODE -D_WIN32_WINNT=0x502 -DWINVER=0x502)
 
-include_directories(src/include)
 add_subdirectory(tools)
+include_directories(src/include)
 
 add_compile_flags("-Wno-attributes")
 
