--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -5,3 +5,6 @@ function(add_host_tool _tool)
 endfunction()
 
 add_host_tool(spec2def spec2def.c)
+
+add_executable(ntv6-patch ntv6-patch.cc)
+target_link_libraries(ntv6-patch -lpeFile -lexshit -lstdshit)
