tests: added wine test locale.c

--- a/tests/kernel32_vista/CMakeLists.txt
+++ b/tests/kernel32_vista/CMakeLists.txt
@@ -1,2 +1,4 @@
-link_libraries(krnl32ex)
 add_executable(locale locale.c)
+
+link_libraries(krnl32ex)
+add_executable(lcid-locale-name lcid-locale-name.c)
