kernel32_vista: 1. implemented GetLocaleInfoEx, GetNumberFormatEx, IsValidLocaleName 2. LCIDToLocaleName, fixed incorrect return on )cchName == 0) 3. tests/locale.c: GetLocaleInfoW loaded from krnl32ex.dll

--- a/src/kernel32_vista/CMakeLists.txt
+++ b/src/kernel32_vista/CMakeLists.txt
@@ -10,6 +10,8 @@ add_library(krnl32exO OBJECT
 	sync.c
 	locale/datetime.c
 	locale/locale.c
+	locale/xxx.c
+	
 	${CMAKE_CURRENT_BINARY_DIR}/locale_table.c  
 	stubs.c
 	finalpath.c
